<resources>
    <string name="app_name">Classroom Management</string>
    <string name="login_error">Incorrect email or password</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="login">login</string>
    <string name="signUp">Sign up</string>
    <string name="title_activity_signUp">Sign up</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_classroom_list">Classrooms</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="DeleteClassroomLabel">Delete classroom</string>
    <string name="confirm">Confirm</string>
    <string name="deleteClassroomConfirm">Delete classroom ?</string>
    <string name="cancel">Cancel</string>
    <string name="saved_successfully">Successfully saved!</string>
    <string name="unexpected_error">An unexpected error occurred. Try later.</string>
    <string name="deleted_successfully">Deleted successfully</string>
    <string name="logout">Log out</string>
    <string name="about">About</string>
    <string name="logoutConfirmDialog">Are you sure you want to log out?</string>
    <string name="morning_greetings">"Good morning, "</string>
    <string name="evening_greetings">"Good evening, "</string>
    <string name="default_greetings">"Good to see you, "</string>
    <string name="reservation_text">"Reservation text: "</string>
    <string name="ok">OK</string>
    <string name="night_mode_set">Toggle night mode</string>
    <string name="settings">Settings</string>
    <string name="delete_reservation_confirm">Removed reservation</string>
    <string name="deny_permission">Permission denied</string>
    <string name="slogan">Book classrooms in your school within three clicks.</string>
    <string name="app_version">Version 1.1.0 - Academic use only</string>
    <string name="android_version_required">Android 11.0 (R) at least is required for optimal use.</string>
    <string name="creators">Developed by Benjamin and Nathan at HES-SO Valais-Wallis.</string>
    <string name="date_hint">Date: dd/mm/yyyy</string>
    <string name="date_hint_us">Date: mm/dd/yyyy</string>
    <string name="time_hint">Time: hh:mm</string>
    <string name="occupants_hint">Occupants: </string>
    <string name="delete_account_confirm">Are you sure you want to delete your account?</string>
    <string name="delete_account_message">This action can not be reversed and all reservation corresponding to your account will be deleted.</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="change_pwd_btn2">Send reset email</string>
    <string name="edit_reservation">Edit</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="password_no_match">Passwords do not match</string>
    <string name="password_criteria">Password must be at least 8 characters long</string>
    <string name="email_already_use">This email is already assigned to an account.</string>
    <string name="send_verification_email">Send verification email</string>
    <string name="verification_email_sent">Verification email sent</string>
    <string name="already_verified">Email already verified</string>
</resources>